fix: hardcode final CORS origin